; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_synth_channel_bell.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_synth_channel_bell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbg_parser = type { i32 }
%struct.sbg_script_synth = type { i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"bell\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@EDOM = common dso_local global i32 0, align 4
@SBG_TYPE_BELL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sbg_parser*, %struct.sbg_script_synth*)* @parse_synth_channel_bell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_synth_channel_bell(%struct.sbg_parser* %0, %struct.sbg_script_synth* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sbg_parser*, align 8
  %5 = alloca %struct.sbg_script_synth*, align 8
  %6 = alloca double, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.sbg_parser* %0, %struct.sbg_parser** %4, align 8
  store %struct.sbg_script_synth* %1, %struct.sbg_script_synth** %5, align 8
  %9 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %10 = call i32 @lex_fixed(%struct.sbg_parser* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %42

13:                                               ; preds = %2
  %14 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %15 = call i32 @lex_double(%struct.sbg_parser* %14, double* %6)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %18, i32* %3, align 4
  br label %42

19:                                               ; preds = %13
  %20 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %21 = call i32 @parse_volume(%struct.sbg_parser* %20, i32* %8)
  %22 = call i32 @FORWARD_ERROR(i32 %21)
  %23 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %24 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load double, double* %6, align 8
  %27 = call i64 @scale_double(i32 %25, double %26, i32 1, i32* %7)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %19
  %30 = load i32, i32* @EDOM, align 4
  %31 = call i32 @AVERROR(i32 %30)
  store i32 %31, i32* %3, align 4
  br label %42

32:                                               ; preds = %19
  %33 = load i32, i32* @SBG_TYPE_BELL, align 4
  %34 = load %struct.sbg_script_synth*, %struct.sbg_script_synth** %5, align 8
  %35 = getelementptr inbounds %struct.sbg_script_synth, %struct.sbg_script_synth* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* %7, align 4
  %37 = load %struct.sbg_script_synth*, %struct.sbg_script_synth** %5, align 8
  %38 = getelementptr inbounds %struct.sbg_script_synth, %struct.sbg_script_synth* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* %8, align 4
  %40 = load %struct.sbg_script_synth*, %struct.sbg_script_synth** %5, align 8
  %41 = getelementptr inbounds %struct.sbg_script_synth, %struct.sbg_script_synth* %40, i32 0, i32 1
  store i32 %39, i32* %41, align 4
  store i32 1, i32* %3, align 4
  br label %42

42:                                               ; preds = %32, %29, %17, %12
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @lex_fixed(%struct.sbg_parser*, i8*, i32) #1

declare dso_local i32 @lex_double(%struct.sbg_parser*, double*) #1

declare dso_local i32 @FORWARD_ERROR(i32) #1

declare dso_local i32 @parse_volume(%struct.sbg_parser*, i32*) #1

declare dso_local i64 @scale_double(i32, double, i32, i32*) #1

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
